src/App.css
body {
  margin: 0;
  padding: 0;
  height: 100%;
}

.App {
  display: flex;
  min-height: 100vh;
  flex-direction: column;
  justify-content: space-between;
  background-color: #303132;

  text-align: center;
  align-items: center;
  font-size: calc(10px + 2vmin);
  color: white;
  overflow-y: hidden;
  overscroll-behavior: none;
}

.Content {
  width: 80%;
  max-width: 1000px;
}

.Header {
  font-size: calc(12px + 2vmin);
  font-weight: bold;
  margin-top: 0.6rem;
  margin-bottom: 0.6rem;
  color: #fff;
  display: flex;
  justify-content: center;
  align-items: center;
  img {
    height: 1.8rem;
    padding-right: 0.4rem;
    transform: rotate(-16deg);
  }
}

.InputFieldWrapper {
  width: 100%;
  display: flex;
  justify-content: center;
}

.InputField {
  width: 100%;
}

.App-footer {
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  font-size: calc(2vmin);
  margin: 1.5rem;
}

.PokemonName {
  font-size: calc(20px + 2vmin);
  font-weight: bold;
  margin-top: 2.6rem;
}

.PokemonType {
  font-size: calc(15px + 2vmin);
  font-weight: bold;
  margin-bottom: 2rem;
}

.PrevAndNextPokemon {
  font-size: calc(5px + 2vmin);
  position: relative;
  padding-top: 1px;
}

.PreviousPokemon {
  position: absolute;
  left: 0;
}
.NextPokemon {
  position: absolute;
  right: 0;
}

.SelectButton {
  padding: 0.5rem;
}

.LeftArrow {
  display: flex;
}

.RightArrow {
  transform: rotate(180deg);
  display: flex;
}

.DefenseMultiplier {
  margin-bottom: 1rem;
}

.DefenseMultiplier-multi {
  font-weight: bold;
}

.DefenseMultiplier-4 {
  color: red;
}

.DefenseMultiplier-2 {
  color: orangered;
}

.DefenseMultiplier-05 {
  color: green;
}

.DefenseMultiplier-025 {
  color: greenyellow;
}

.DefenseMultiplier-0 {
  color: #000;
  text-shadow: 0 0 1.5px #fff, 0 0 1.5px #fff, 0 0 1.5px #fff, 0 0 1.5px #fff;
}

.DefenseMultiplier-types {
  font-style: italic;
}

.Footer {
  margin-top: auto;
  font-size: calc(2vmin);
  margin: 1.5rem;
}

@media screen and (min-width: 1600px) {
  .Footer {
    margin-top: auto;
    font-size: small;
    margin: 1.5rem;
  }
}

button,
button:focus button:active {
  color: white;
  outline: none;
  background: transparent;
  border: none;
}

